<resources>
    <string name="app_name">Manage Money</string>
    <string name="money_management">MONEY MANAGEMENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_back">Click back again to exit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="sign_with_google">Sign in with Google</string>
    <string name="tab_daily">Daily</string>
    <string name="tab_weekly">Weekly</string>
    <string name="tab_monthly">Monthly</string>
    <string name="tab_calendar">Calendar</string>

    <!--    date-->
    <!--day of week-->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!--month of year-->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string-array name="array_month">
        <item>@string/january</item>
        <item>@string/february</item>
        <item>@string/march</item>
        <item>@string/april</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/august</item>
        <item>@string/september</item>
        <item>@string/october</item>
        <item>@string/november</item>
        <item>@string/december</item>
    </string-array>

    <string name="txt_in_come">Income</string>
    <string name="txt_expense">Expense</string>
    <string name="txt_total">Total</string>

    <string name="bottom_home">Home</string>
    <string name="bottom_statistic">Statistic</string>
    <string name="bottom_account">Account</string>
    <string name="bottom_more">More</string>

    <string name="author_name" translatable="false">Manage Money</string>

    <string name="select_file">Select file from device</string>
    <string name="restore_file_confirm">All existing data will be overwritten. Are you sure you want to restore?</string>
    <string name="restore">Restore</string>
    <string name="restore_success">Restore success</string>
    <string name="restore_failed">Restore failed</string>

    <string name="delete_all_confirm">Are you sure want to delete all data?</string>
    <string name="delete_this_data_confirm">Are you sure want to delete this data?</string>


</resources>