<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_title_income"
            style="@style/TextViewMoney"
            android:layout_width="0dp"
            android:text="@string/txt_in_come"
            app:layout_constraintEnd_toStartOf="@id/tv_title_expense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_expense"
            style="@style/TextViewMoney"
            android:layout_width="0dp"
            android:text="@string/txt_expense"
            app:layout_constraintEnd_toStartOf="@id/tv_title_total"
            app:layout_constraintStart_toEndOf="@id/tv_title_income"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_total"
            style="@style/TextViewMoney"
            android:layout_width="0dp"
            android:text="@string/txt_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_expense"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_income"
            style="@style/TextViewMoney"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_app"
            app:layout_constraintEnd_toStartOf="@id/tv_title_expense"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_income"
            tools:text="15.000.000" />

        <TextView
            android:id="@+id/tv_expense"
            style="@style/TextViewMoney"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            app:layout_constraintEnd_toStartOf="@id/tv_total"
            app:layout_constraintStart_toEndOf="@id/tv_income"
            app:layout_constraintTop_toBottomOf="@id/tv_title_expense"
            tools:text="2.000.000" />

        <TextView
            android:id="@+id/tv_total"
            style="@style/TextViewMoney"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/gray2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_expense"
            app:layout_constraintTop_toBottomOf="@id/tv_title_total"
            tools:text="13.000.000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_to_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_top"
        android:background="@color/bg_gray"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tv_to_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_500"
            android:paddingStart="20dp"
            android:textColor="@color/gray1"
            app:layout_constraintEnd_toStartOf="@id/tv_expense_to_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="15 Mar 2023, Tuesday" />

        <TextView
            android:id="@+id/tv_expense_to_day"
            style="@style/TextViewMoney"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_app"
            app:layout_constraintEnd_toStartOf="@id/tv_total_to_day"
            app:layout_constraintStart_toEndOf="@id/tv_to_day"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2.000.000" />

        <TextView
            android:id="@+id/tv_total_to_day"
            style="@style/TextViewMoney"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_expense_to_day"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="13.000.000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>